<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ui_my_vip_auth_view"
        style="@style/base_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vip_auth"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/ui_my_vip_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:drawableStart="@drawable/dot_red"
            android:drawablePadding="@dimen/space_size_10"
            android:textColor="@color/black_666666"
            android:textSize="@dimen/font_size_14" />
    </RelativeLayout>

    <TextView
        android:id="@+id/ui_my_official_account"
        style="@style/base_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_line"
        android:drawableEnd="@drawable/arrow_right"
        android:text="@string/follow_official_account"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/font_size_16" />

    <RelativeLayout
        android:id="@+id/ui_my_coupon_view"
        style="@style/base_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_coupon"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/ui_my_coupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:drawableStart="@drawable/dot_red"
            android:drawablePadding="@dimen/space_size_10"
            android:textColor="@color/black_666666"
            android:textSize="@dimen/font_size_14" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ui_my_anniversary_view"
        style="@style/base_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brithday_anniversary_notice"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/ui_my_anniversary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:drawableStart="@drawable/dot_red"
            android:drawablePadding="@dimen/space_size_10"
            android:textColor="@color/black_666666"
            android:textSize="@dimen/font_size_14" />
    </RelativeLayout>

    <TextView
        android:id="@+id/ui_my_order_search"
        style="@style/base_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_line"
        android:drawableEnd="@drawable/arrow_right"
        android:text="@string/order_search"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/font_size_16" />

    <TextView
        android:id="@+id/ui_my_collection"
        style="@style/base_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_line"
        android:drawableEnd="@drawable/arrow_right"
        android:text="@string/my_collection"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/font_size_16" />

    <RelativeLayout
        android:id="@+id/ui_my_online_service_view"
        style="@style/base_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_online"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/ui_my_online_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="8:00-21:00"
            android:textColor="@color/black_666666"
            android:textSize="@dimen/font_size_14" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ui_my_phone_service_view"
        style="@style/base_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_onphone"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/ui_my_phone_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="400-608-0960"
            android:textColor="@color/black_666666"
            android:textSize="@dimen/font_size_14" />
    </RelativeLayout>

    <TextView
        android:id="@+id/ui_my_scan_history"
        style="@style/base_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_line"
        android:drawableEnd="@drawable/arrow_right"
        android:text="@string/recent_scan"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/font_size_16" />

    <TextView
        android:id="@+id/ui_my_suggestion"
        style="@style/base_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_line"
        android:drawableEnd="@drawable/arrow_right"
        android:text="@string/complain_suggest"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/font_size_16" />

</LinearLayout>