<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_fff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_f2f2f2"
            android:orientation="vertical"
            android:paddingBottom="@dimen/space_size_30">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

                <ImageView
                    android:id="@+id/ui_my_service"
                    android:layout_width="@dimen/space_size_45"
                    android:layout_height="@dimen/space_size_45"
                    android:paddingStart="@dimen/space_size_15"
                    android:paddingEnd="@dimen/space_size_10"
                    android:src="@mipmap/person_service" />

                <ImageView
                    android:id="@+id/ui_my_setting"
                    android:layout_width="@dimen/space_size_45"
                    android:layout_height="@dimen/space_size_45"
                    android:layout_toEndOf="@+id/ui_my_service"
                    android:paddingStart="@dimen/space_size_10"
                    android:paddingEnd="@dimen/space_size_15"
                    android:src="@mipmap/person_setting" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_size_15"
                android:layout_marginTop="-20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ui_my_head"
                    android:layout_width="@dimen/space_size_70"
                    android:layout_height="@dimen/space_size_70"
                    android:src="@mipmap/login_in" />

                <TextView
                    android:id="@+id/ui_my_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/space_size_10"
                    android:layout_toEndOf="@+id/ui_my_head"
                    android:text="@string/un_login"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/font_size_16" />

                <TextView
                    android:id="@+id/ui_my_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/space_size_10"
                    android:layout_toEndOf="@+id/ui_my_head"
                    android:textColor="@color/black_666666" />
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/ui_my_vip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_size_15"
            android:layout_marginTop="-15dp"
            android:layout_marginEnd="@dimen/space_size_15"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@mipmap/top_vip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_fff"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_size_15"
                android:layout_marginTop="@dimen/space_size_25"
                android:layout_marginEnd="@dimen/space_size_15"
                android:text="@string/my_order"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/font_size_16" />

            <View
                style="@style/ui_line"
                android:layout_marginTop="@dimen/space_size_12"
                android:layout_marginBottom="@dimen/space_size_12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_size_15"
                android:paddingEnd="@dimen/space_size_15">

                <LinearLayout
                    android:id="@+id/ui_my_unpay_order_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/ui_my_unpay_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/will_pay_money"
                        android:drawablePadding="@dimen/space_size_5"
                        android:gravity="center_horizontal"
                        android:text="@string/unpay_order"
                        android:textColor="@color/black_333333"
                        android:textSize="@dimen/font_size_14" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ui_my_unsend_order_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/ui_my_unsend_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/will_get_goods"
                        android:drawablePadding="@dimen/space_size_5"
                        android:gravity="center_horizontal"
                        android:text="@string/unsend_order"
                        android:textColor="@color/black_333333"
                        android:textSize="@dimen/font_size_14" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ui_my_unprise_order_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/ui_my_unprise_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/will_evaluation"
                        android:drawablePadding="@dimen/space_size_5"
                        android:gravity="center_horizontal"
                        android:text="@string/unprise_order"
                        android:textColor="@color/black_333333"
                        android:textSize="@dimen/font_size_14" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ui_my_all_order_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/ui_my_all_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@mipmap/all_order"
                        android:drawablePadding="@dimen/space_size_5"
                        android:gravity="center_horizontal"
                        android:text="@string/all_order"
                        android:textColor="@color/black_333333"
                        android:textSize="@dimen/font_size_14" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_fff">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_size_40"
                android:layout_alignParentBottom="true"
                android:background="@color/grey_f2f2f2" />

            <ImageView
                android:id="@+id/ui_my_vip_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_size_15"
                android:layout_marginTop="@dimen/space_size_10"
                android:layout_marginEnd="@dimen/space_size_15"
                android:layout_marginBottom="@dimen/space_size_20"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@mipmap/person_center" />
        </RelativeLayout>

        <include layout="@layout/include_me_menu" />
    </LinearLayout>
</ScrollView>